--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>TIENDA ONIX.CEL</title>
   </head>
+
+
+
   <body>
-    <div id="app"></div>
+    <header>
+      <nav> </nav>
+    </header>
+    <main>
+    <section class="container">
+       
+    </section>
+    </main>
+
+
+    
     <script type="module" src="/main.js"></script>
   </body>
+  <footer>
+
+  </footer>
 </html>
