entrega tp ultima version

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <!--productos  inicio-->
     <section class="row my-5">
-      <h1 class="fs-1"> LOS + VENDIDOS</h1>
+      <h1 class="titulo"> LOS + VENDIDOS</h1>
       <!-- card productos 1-->
        <div class="producto-1 card col-3 m-3">
   <img src="imagenes/D_NQ_NP_955984-MLA70233288776_072023-O.webp" class="card-img-top" alt="...">
