--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-lg ">
           <div class="container-fluid">
-            <a href="/index.html"> <img src="imagenes/iconos-06.png" alt="icono" class="icono">
+            <a href="/index.html"> <img src="/imagenes/iconos-06.png" alt="icono" class="icono">
             </a>
             <a class="navbar-brand text-reset" href="/index.html">ÓNIX.CEL</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
