--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-lg ">
           <div class="container-fluid">
-            <a href="index.html"> <img src="/imagenes/iconos-06.png" alt="icono" class="icono">
+            <a href="/index.html"> <img src="/imagenes/iconos-06.png" alt="icono" class="icono">
             </a>
             <a class="navbar-brand text-reset" href="/index.html">ÓNIX.CEL</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,10 +26,10 @@
                   <a class="nav-link text-reset" href="/index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active text-reset" aria-current="page" href="sobre-nosotros.html">Sobre Nosotros</a>
+                  <a class="nav-link active text-reset" aria-current="page" href="/sobre-nosotros.html">Sobre Nosotros</a>
                 </li>
                 <li class="nav-item-contacto">
-                  <a class="nav-link text-reset" href="contacto.html">Contacto</a>
+                  <a class="nav-link text-reset" href="/contacto.html">Contacto</a>
                 </li>
                 
               </ul>
@@ -39,7 +39,7 @@
               
             </div>
               <li class="d-flex">
-                <a href="carrito.html" class=" text-reset me-3">
+                <a href="/carrito.html" class=" text-reset me-3">
                   <i class="fa-solid fa-cart-shopping fa-xl" style="color: #ebebeb;"></i>
                 </a>
               </li>  
