--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <a class="nav-link text-reset" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active text-reset" aria-current="page" href="pages/sobre-nosotros.html">Sobre Nosotros</a>
+                <a class="nav-link active text-reset" aria-current="page" href="/pages/sobre-nosotros.html">Sobre Nosotros</a>
               </li>
               <li class="nav-item-contacto">
-                <a class="nav-link text-reset" href="pages/contacto.html">Contacto</a>
+                <a class="nav-link text-reset" href="/pages/contacto.html">Contacto</a>
               </li>
             </ul>
             <div class="d-flex me-5">
